--- a/Interpolator/packages.config
+++ b/Interpolator/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Extreme.Core" version="1.0.0" targetFramework="net461" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net461" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net461" />
   <package id="MathNet.Numerics" version="4.4.1" targetFramework="net461" />
