--- a/Interpolator/packages.config
+++ b/Interpolator/packages.config
@@ -3,6 +3,7 @@
   <package id="Extreme.Core" version="1.0.0" targetFramework="net461" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net461" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net461" />
+  <package id="MathNet.Filtering" version="0.4.0" targetFramework="net461" />
   <package id="MathNet.Numerics" version="4.4.1" targetFramework="net461" />
   <package id="OxyPlot.Core" version="1.0.0" targetFramework="net461" />
   <package id="OxyPlot.Wpf" version="1.0.0" targetFramework="net461" />
